--- a/style.css
+++ b/style.css
@@ -10,18 +10,26 @@ body {
 .timer-button {
   height: 100vh;
   width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: white;
   font-size: 5vw;
   background: blue;
 }
+
 #menu {
   height: 100%;
   width: 10%;
   background: red;
 }
+
 .active {
   background: white;
   color: black;
@@ -39,16 +47,21 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100vw;
   height: 100vh;
 }
 
 #p1-text {
-  transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
 }
+
 #p2-text {
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 #overlay {
@@ -57,9 +70,15 @@ body {
   position: fixed;
   width: 100vw;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: white;
   font-size: 3em;
 }
@@ -73,11 +92,16 @@ body {
   position: fixed;
   visibility: hidden;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-
   /* This centers our sketch horizontally. */
-  justify-content: center;
-
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   /* This centers our sketch vertically. */
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+/*# sourceMappingURL=style.css.map */
