--- a/style.scss
+++ b/style.scss
@@ -71,8 +71,9 @@ body {
 #sketch-container {
   background: white;
   position: fixed;
+  width: 100vw;
+  height: 100vh;
   visibility: hidden;
-  margin: 0;
   display: flex;
 
   /* This centers our sketch horizontally. */
